src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__case_with_unexpected_token.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error[E006]: Missing expected Token `OF`
  ┌─ <internal>:3:27
  │
3 │         CASE StateMachine DELTA
  │                           ^^^^^ Missing expected Token `OF`

error[E006]: Missing expected Token `:`
  ┌─ <internal>:4:9
  │
4 │         1: x;
  │         ^ Missing expected Token `:`

error[E048]: Could not resolve reference to StateMachine
  ┌─ <internal>:3:14
  │
3 │         CASE StateMachine DELTA
  │              ^^^^^^^^^^^^ Could not resolve reference to StateMachine

error[E048]: Could not resolve reference to DELTA
  ┌─ <internal>:3:27
  │
3 │         CASE StateMachine DELTA
  │                           ^^^^^ Could not resolve reference to DELTA

error[E048]: Could not resolve reference to x
  ┌─ <internal>:4:12
  │
4 │         1: x;
  │            ^ Could not resolve reference to x
